# TaleArchitect

./: LICENSE  PLUGIN_API.md  README.md  package.json  vite.config.js
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: CommandPalette.svelte  PluginsConfig.svelte  ToastContainer.svelte
src/lib/controllers/: charactersController.svelte.ts  historyController.ts  launcherController.ts  mapController.svelte.ts  projectSettingsController.ts  timelineController.svelte.ts  workspaceController.ts
src/lib/models/: project.ts
src/lib/screens/: Launcher.svelte  Workspace.svelte
src/lib/screens/sections/: SectionCharacters.svelte  SectionMap.svelte  SectionSettings.svelte  SectionTimeline.svelte
src/lib/services/: commands.ts  pluginBridge.svelte.ts  pluginBridge.ts  pluginLoader.ts
src/lib/stores/: app.svelte.ts  history.svelte.ts  project.svelte.ts  recent.svelte.ts  toasts.svelte.ts  ui.svelte.ts
src/routes/: +layout.svelte  +page.svelte  app.css
